PCAI-120. Добавление AiContextBuilder